All done and ready to merge to the main branch

--- a/index.html
+++ b/index.html
@@ -387,7 +387,7 @@
                 </div>
                 <div class="banks-savings">#UNOready (via GCash)</div>
                 <div class="banks-interest">
-                    <p class="interest">3.5% - 6%</p>
+                    <p class="interest">3.5% - 4.25%</p>
                 </div>
 
                 <div class="expand-button">
@@ -399,9 +399,6 @@
                         <li>4.25% p.a. for savings of P5,000 or more up to P4,999,999.99</li>
                         <li>1% p.a. for savings P5,000,000 and above.</li>
                         <li>Daily interest crediting.</li><br>
-                        <p class="details-header">Promo for new users only (valid until Nov. 30, 2023):</p>
-                        <li>Earn 6% p.a. Account's ADB should be at least PHP 5,000.00</li>
-                        <li>Learn more <a href="https://uno.bank/promos-and-offers/" target="_blank">here.</a></li><br>
                         <p class="details-header">Key features:</p>
                         <li>Access your account through GCash and UNO Digital Bank app.</li>
                         <li>Free life insurance coverage worth PHP50,000 for a minimum monthly ADB of PHP10,000.</li>
@@ -418,7 +415,7 @@
                 </div>
                 <div class="banks-savings">#UNOready (via UNO)</div>
                 <div class="banks-interest">
-                    <p class="interest">3.5% - 6%</p>
+                    <p class="interest">3.5% - 4.25%</p>
                 </div>
 
                 <div class="expand-button">
@@ -430,9 +427,6 @@
                         <li>4.25% p.a. for savings of P5,000 or more up to P4,999,999.99</li>
                         <li>1% p.a. for savings P5,000,000 and above.</li>
                         <li>Daily interest crediting.</li><br>
-                        <p class="details-header">Promo for new users only (valid until Nov. 30, 2023):</p>
-                        <li>Earn 6% p.a. Account's ADB should be at least PHP 5,000.00</li>
-                        <li>Learn more <a href="https://uno.bank/promos-and-offers/" target="_blank">here.</a></li><br>
                         <p class="details-header">Key features:</p>
                         <li>Access your account through the UNO Digital Bank app.</li>
                         <li>Free life insurance coverage worth PHP50,000 for a minimum monthly ADB of PHP10,000.</li>
@@ -460,7 +454,7 @@
                         <li>4% p.a. for P5,000,000 and above.</li>
                         <li>Monthly interest crediting.</li><br>
                         <p class="details-header">Key features:</p>
-                        <li>Access to Bills payment.</li>
+                        <li>Access to Bills payment and Bank transfer.</li>
                         <li>Learn more <a href="https://uniondigitalbank.io/en/product-rates-fees" target="_blank">here.</a></li>
                     </ul>
                 </div>
@@ -486,6 +480,7 @@
                         <li>ATM/Debit card available.</li>
                         <li>Generate Bank statement.</li>
                         <li>Savings account Analytics.</li>
+                        <li>Unlimited free withdrawals at any EastWest bank ATM and free 4 withdrawals per month for other BancNet ATMs.</li>
                         <li>Access to Bills payment, Mobile load, Insurance, and Loan offers.</li>
                         <li>Learn more <a href="https://www.komo.ph/" target="_blank">here.</a></li>
                     </ul>
@@ -543,10 +538,12 @@
                         <li>90 days - 6.8% p.a.</li>
                         <li>180 days - 7% p.a.</li>
                         <li>360 days - 7.5% p.a.</li><br>
-                        <p class="details-header">Key features:</p>
-                        <li>Access Bills payment, Insurance, Telemedicine, and Loan offers.</li>
-                        <li>Free transfers from RCBC to DiskarTech and vice versa.</li>
-                        <li>Learn more <a href="https://diskartech.ph/faqs/" target="_blank">here.</a></li>
+                        <p class="details-header">Details:</p>
+                        <li>Minimum of P500 deposit amount and no maximum limit.</li>
+                        <li>You can open multiple time deposits (no limit).</li>
+                        <li>Interest payout will be at the maturity date.</li>
+                        <li>Partial early withdrawal is not supported at the moment.</li>
+                        <li>Learn more <a href="https://www.ownbank.com/help-center/category/4/18" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
@@ -568,11 +565,14 @@
                     <ul>
                         <p class="details-header">Term and Interest rate:</p>
                         <li>6 months - 6% p.a.</li>
-                        <li>12 months - 7.5% p.a.</li>
-                        <p class="details-header">Key features:</p>
-                        <li>Transfer to other OwnBank accounts using mobile number.</li>
-                        <li>Access Mobile load, Game credits, and Data plans services.</li>
-                        <li>Learn more <a href="https://www.ownbank.com/help-center" target="_blank">here.</a></li>
+                        <li>12 months - 7.5% p.a.</li><br>
+                        <p class="details-header">Details:</p>
+                        <li>Minimum of P10,000 deposit amount and no maximum limit.</li>
+                        <li>You can open up to maximum of 5 time deposit accounts.</li>
+                        <li>Interest payout will be at the maturity date.</li>
+                        <li>In case of pre-termination, interest rate is still applicable, this will be computed from the time of placement up to the date of pre-termination.</li>
+                        <li>Pre-termination is subject to DST (Documentary Stamp Tax) that will be shouldered by the account holder.</li>
+                        <li>Learn more <a href="https://www.netbank.ph/netbank-mobile-faqs" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
@@ -596,13 +596,12 @@
                         <li>60 days - 5.75% p.a.</li>
                         <li>90 days - 6.25% p.a.</li>
                         <li>180 days - 6.5% p.a.</li>
-                        <li>1 year - 6.75% p.a.</li>
-                        <p class="details-header">Key features:</p>
-                        <li>Access your account through the GCash and CIMB app.</li>
-                        <li>Request and download Bank Certificate.</li>
-                        <li>Physical and Virtual Debit Card available through the CIMB app.</li>
-                        <li>Account holders who maintain a minimum ADB of P5,000 for one month will be able to enjoy free life insurance.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/digital-banking/our-products/gsave.html" target="_blank">here.</a></li>
+                        <li>1 year - 6.75% p.a.</li><br>
+                        <p class="details-header">Details:</p>
+                        <li>Minimum of P10,000 and maximum of P10 million deposit amount.</li>
+                        <li>Interest payout will be at the maturity date.</li>
+                        <li>Pre-termination fees will be charged in the event that a time deposit is withdrawn before the maturity date.</li>
+                        <li>Learn more <a href="https://uniondigitalbank.io/en/products-time-deposit" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
@@ -622,14 +621,14 @@
                 <div class="interest-details">
                     <ul>
                         <p class="details-header">Term and Interest rate:</p>
-                        <li>3, 4, 5, 6, 7, 8, 9, 10, 11, up to 12 months - 6.5%</li>
-                        <p class="details-header">Key features:</p>
-                        <li>Set customizable target amounts and timeframes for each Go Save accounts.</li>
-                        <li>Schedule auto-saves or save your change when you shop.</li>
-                        <li>Transfers to other local banks are free up to 3 times per week.</li>
-                        <li>Get a free ATM debit card.</li>
-                        <li>Earn Go Rewards points that you can redeem as cash, which will be credited to your account.</li>
-                        <li>Learn more <a href="https://www.gotyme.com.ph/" target="_blank">here.</a></li>
+                        <li>3, 4, 5, 6, 7, 8, 9, 10, 11, up to 12 months - 6.5%</li><br>
+                        <p class="details-header">Details:</p>
+                        <li>GCash - minimum of P5,000 and max of P100,000 deposit amount.</li>
+                        <li>UNO App - minimum of P5,000 and max of P500,000 deposit amount.</li>
+                        <li>You can open up to maximum of 5 time deposit accounts.</li>
+                        <li>Interest payout will be at the maturity date.</li>
+                        <li>You can access your funds at any time prior to the maturity of your time deposit. However, the cost of Documentary Stamp Tax (DST) and a pre-termination penalty will be deducted from the net proceeds of your deposit.</li>
+                        <li>Learn more <a href="https://uno.bank/time-deposit/" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
@@ -649,14 +648,14 @@
                     <ul>
                         <p class="details-header">Term and Interest rate:</p>
                         <li>12 months - 6.5% p.a.</li>
-                        <li>24 months - 6.5% p.a.</li>
-                        <p class="details-header">Key features:</p>
-                        <li>Set customizable target amounts and timeframes for each Go Save accounts.</li>
-                        <li>Schedule auto-saves or save your change when you shop.</li>
-                        <li>Transfers to other local banks are free up to 3 times per week.</li>
-                        <li>Get a free ATM debit card.</li>
-                        <li>Earn Go Rewards points that you can redeem as cash, which will be credited to your account.</li>
-                        <li>Learn more <a href="https://www.gotyme.com.ph/" target="_blank">here.</a></li>
+                        <li>24 months - 6.5% p.a.</li><br>
+                        <p class="details-header">Details:</p>
+                        <li>GCash - minimum of P5,000 and maximum of P100,000 deposit amount.</li>
+                        <li>UNO App - minimum of P5,000 and maximum of P500,000 deposit amount.</li>
+                        <li>You can open up to maximum of 5 time deposit accounts.</li>
+                        <li>Interest payout will be monthly.</li>
+                        <li>You can access your funds at any time prior to the maturity of your time deposit. However, the cost of Documentary Stamp Tax (DST) and a pre-termination penalty will be deducted from the net proceeds of your deposit.</li>
+                        <li>Learn more <a href="https://uno.bank/time-deposit/" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
@@ -666,7 +665,7 @@
                 <div class="banks-logo">
                     <img src="tonik-logo.png" alt="tonik bank logo">
                 </div>
-                <div class="banks-savings">Tonik Time Deposit</div>
+                <div class="banks-savings">Tonik Bank TD</div>
                 <div class="banks-interest">
                     <p class="interest">4.5% - 6%</p>
                 </div>
@@ -681,15 +680,12 @@
                         <li>9 months - 4.5% p.a.</li>
                         <li>12 months - 4.75% p.a.</li>
                         <li>18 months - 5% p.a.</li>
-                        <li>24 months - 5.25% p.a.</li>
-                        <li>Create8 up to 5 stashes (Solo and Group combined).</li>
-                        <li>Monthly interest crediting.</li><br>
-                        <p class="details-header">Key features:</p>
-                        <li>Group Stash allows you to invite family and friends to contribute to your savings goal.</li>
-                        <li>Physical and Virtual Debit Card available.</li>
-                        <li>Access to Quick, Big, and Shop Installment Loan products.</li>
-                        <li>Request a Bank Certificate.</li>
-                        <li>Learn more <a href="https://tonikbank.com/savings-cards/tonik-account" target="_blank">here.</a></li>
+                        <li>24 months - 5.25% p.a.</li><br>
+                        <p class="details-header">Details:</p>
+                        <li>No minimum amount is required.</li>
+                        <li>You can pull out your time deposit anytime and no Document Stamp Tax (DST) if you withdraw within 5 days after opening.</li>
+                        <li>Early withdrawal after 5 days will still give you 1% interest p.a.</li>
+                        <li>Learn more <a href="https://tonikbank.com/savings-cards/time-deposit" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
@@ -703,36 +699,12 @@
         </section>
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
     
     </main>
 
     <footer>
         <div id="footer-content">
-            <p>Please join our Facebook group <a href="https://web.facebook.com/groups/lemoneyd/" class="lemoneyd-link">PH Digital Banks</a></p> 
+            <p>Please join our Facebook group <a href="https://web.facebook.com/groups/lemoneyd/" class="lemoneyd-link">Digital Banks Philippines</a></p> 
             <p>and subreddit <a href="https://www.reddit.com/r/DigitalbanksPh/" class="lemoneyd-link">r/DigitalbanksPh</a></p>
             <p>For the Filipino Finance Community 💛</p>
             <p>&copy; 2023 Lemoneyd. All rights reserved.</p>
