Removed some wordings in the savings-wordings ID

--- a/index.html
+++ b/index.html
@@ -48,10 +48,8 @@
 
         <section id="savings-account">
             <div id="savings-wordings">
-                <h3>Best High-Interest Digital Savings Accounts</h3>
-                <p>
-                    These are 100% online savings accounts with high interest rates. Best for building emergency fund.
-                </p>
+                <h3>High-Interest Digital Savings Accounts</h3>
+                <p>Best for building emergency fund.</p>
             </div>
 
             <div id="banks-list">
@@ -494,10 +492,8 @@
 
         <section id="time-deposit">
             <div id="savings-wordings">
-                <h3>Best High-Interest Time Deposits of Digital Banks</h3>
-                <p>
-                    These are 100% online time deposits with high interest rates. Best for growing your savings.
-                </p>
+                <h3>High-Interest Time Deposits of Digital Banks</h3>
+                <p>Best for growing your savings.</p>
             </div>
 
             <div id="banks-list">
@@ -704,8 +700,6 @@
 
     <footer>
         <div id="footer-content">
-            <p>Please join our Facebook group <a href="https://web.facebook.com/groups/lemoneyd/" class="lemoneyd-link">Digital Banks Philippines</a></p> 
-            <p>and subreddit <a href="https://www.reddit.com/r/DigitalbanksPh/" class="lemoneyd-link">r/DigitalbanksPh</a></p>
             <p>For the Filipino Finance Community 💛</p>
             <p>&copy; 2023 Lemoneyd. All rights reserved.</p>
         </div>
