Edit the savings-wordings of time deposit

--- a/index.html
+++ b/index.html
@@ -492,7 +492,7 @@
 
         <section id="time-deposit">
             <div id="savings-wordings">
-                <h3>High-Interest Time Deposits of Digital Banks</h3>
+                <h3>High-Interest Digital Time Deposits</h3>
                 <p>Best for growing your savings.</p>
             </div>
 
