Updated the Maya Personal Goals interest from 4% to 6%

--- a/index.html
+++ b/index.html
@@ -121,6 +121,35 @@
                 </div>
 
 
+                    <!-- Row 10 -->
+                <div class="banks-logo">
+                    <img src="maya-logo.png" alt="maya bank logo">
+                </div>
+                <div class="banks-savings">Maya Personal Goals</div>
+                <div class="banks-interest">
+                    <p class="interest">6%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <p class="details-header">Promo runs from Dec. 6, 2023 to Jan.3, 2024:</p>
+                        <li>Earn 6% p.a. when you create personal goal accounts during the promo period.</li>
+                        <li>Create up to 5 goal accounts and earn 6% p.a. on each account for a duration of up to six (6) months.</li>
+                        <li>Interest rate applies to max Goal balance of P1 million (any amount higher will not earn interest).</li>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
+                        <li>Access to all Maya app services and features.</li>
+                        <li>5x free InstaPay transfers per month.</li>
+                        <li>Physical and Virtual Debit Card available via the Maya app.</li>
+                        <li>Learn more <a href="https://www.mayabank.ph/savings/personal-goals/" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
+
+
                     <!-- Row 3 -->  
                 <div class="banks-logo">
                     <img src="cimbgcash-logo.png" alt="gsave logo">
@@ -316,32 +345,6 @@
                         <p class="details-header">Key features:</p>
                         <li>Free InstaPay and PESONet transfers.</li>
                         <li>Learn more <a href="https://www.netbank.ph/netbank-mobile" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
-
-                    <!-- Row 10 -->
-                <div class="banks-logo">
-                    <img src="maya-logo.png" alt="maya bank logo">
-                </div>
-                <div class="banks-savings">Maya Personal Goals</div>
-                <div class="banks-interest">
-                    <p class="interest">4%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <li>Create up to 5 goal accounts and earn 4% p.a. on each account for a duration of up to six (6) months.</li>
-                        <li>Interest rate applies to max Goal balance of P1 million (any amount higher will not earn interest).</li>
-                        <li>Monthly interest crediting.</li><br>
-                        <p class="details-header">Key features:</p>
-                        <li>Access to all Maya app services and features.</li>
-                        <li>5x free InstaPay transfers per month.</li>
-                        <li>Physical and Virtual Debit Card available via the Maya app.</li>
-                        <li>Learn more <a href="https://www.mayabank.ph/savings/personal-goals/" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
