Update the interest rates of GSave and UpSave

--- a/index.html
+++ b/index.html
@@ -189,14 +189,13 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <p class="details-header">Promo runs from Jan. 1 to Jan. 31, 2023:</p>
-                        <li>All accounts will earn 5% p.a. on all savings balances(no limit) for the months of Nov. & Dec.</li>
-                        <li>Earn +1% p.a. by growing your Total ADB by at least Php 5,000.</li>
-                        <li>Earn +2% p.a. by using your Virtual Debit Card.</li>
-                        <li>Earn +3% p.a. by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
-                        <li>Earn +4% p.a. by growing your total ADB by at least Php 50,000.</li>
-                        <li>Monthly interest crediting.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li><br>
+                        <li>The base/regular interest rate of GSave is 2.6% p.a.</li><br>
+                        <p class="details-header">Promo runs from Jan. 1 to Jan. 31, 2024:</p>
+                        <li>New and existing accounts will earn 5% p.a. on their total ADB (no limit).</li>
+                        <li>The 5% p.a. promotional interest already includes the base rate of 2.6%.</li>
+                        <li>The additional interest reward earned will be credited, less 20% withholding tax, within 14 business days after the end of the qualifying month, provided that eligible participant's account(s) MUST NOT be blocked and/or closed at the time of crediting.</li>
+                        <li>The base interest rate is credited at the first day of each month.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/new-year-good-fortune-promo.html" target="_blank">here.</a></li><br>
                         <p class="details-header">Key features:</p>
                         <li>Access your account through the GCash and CIMB app.</li>
                         <li>Request and download Bank Certificate.</li>
@@ -214,7 +213,7 @@
                 </div>
                 <div class="banks-savings">UpSave (via CIMB)</div>
                 <div class="banks-interest">
-                    <p class="interest">5% - 15%</p>
+                    <p class="interest">5%</p>
                 </div>
 
                 <div class="expand-button">
@@ -222,14 +221,13 @@
                 </div>
                 <div class="interest-details">
                     <ul>
-                        <p class="details-header">Promo runs from Nov. 1 to Dec. 31, 2023:</p>
-                        <li>All accounts will earn 5% p.a on all savings balances(no limit) for the months of Nov. & Dec.</li>
-                        <li>Earn +1% p.a. by growing your Total ADB by at least Php 5,000.</li>
-                        <li>Earn +2% p.a. by using your Virtual Debit Card.</li>
-                        <li>Earn +3% p.a. by transacting using Virtual Debit Card, Bills payment or Buy Load.</li>
-                        <li>Earn +4% p.a. by growing your total ADB by at least Php 50,000.</li>
-                        <li>Monthly interest crediting.</li>
-                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/5-year-anniversary-deposit-promo.html" target="_blank">here.</a></li><br>
+                        <li>The base/regular interest rate of UpSave is 2.5% p.a.</li><br>
+                        <p class="details-header">Promo runs from Jan. 1 to Jan. 31, 2024:</p>
+                        <li>New and existing accounts will earn 5% p.a. on their total ADB (no limit).</li>
+                        <li>The 5% p.a. promotional interest already includes the base rate of 2.5%.</li>
+                        <li>The additional interest reward earned will be credited, less 20% withholding tax, within 14 business days after the end of the qualifying month, provided that eligible participant's account(s) MUST NOT be blocked and/or closed at the time of crediting.</li>
+                        <li>The base interest rate is credited at the first day of each month.</li>
+                        <li>Learn more <a href="https://www.cimbbank.com.ph/en/promotions/promotions/new-year-good-fortune-promo.html" target="_blank">here.</a></li><br>
                         <p class="details-header">Key features:</p>
                         <li>Access your account through the CIMB app.</li>
                         <li>Request and download Bank Certificate.</li>
