--- a/index.html
+++ b/index.html
@@ -110,8 +110,10 @@
                 </div>
                 <div class="interest-details">
                     <ul>
+                        <li>The base/regular interest rate of Netbank Mobile is 4% p.a.</li><br>
                         <p class="details-header">💰 Lemoneyd x Netbank Mobile 💰</p>
-                        <li>The current interest rate of Netbank Mobile savings is only 4% p.a. but if you will open an account and choose "Netbank Mobile/Tipid Hacks" as the branch and use our unique referral code "AAAH2292", you will earn 6% p.a. interest on your savings, credited daily!</li>
+                        <li>Earn 6% p.a. when you open an account, choose "Netbank Mobile/Tipid Hacks" as the branch and use our unique referral code "AAAH2292".</li>
+                        <li>Daily interest crediting.</li>
                         <li>Promo runs until April 2024.</li><br>
                         <p class="details-header">Key features:</p>
                         <li>Free InstaPay and PESONet transfers.</li>
@@ -190,7 +192,7 @@
                 <div class="interest-details">
                     <ul>
                         <li>The base/regular interest rate of GSave is 2.6% p.a.</li><br>
-                        <p class="details-header">Promo runs from Jan. 1 to Jan. 31, 2024:</p>
+                        <p class="details-header">💰 New Promo - runs from Jan. 1 to Jan. 31, 2024 💰</p>
                         <li>New and existing accounts will earn 5% p.a. on their total ADB (no limit).</li>
                         <li>The 5% p.a. promotional interest already includes the base rate of 2.6%.</li>
                         <li>The additional interest reward earned will be credited, less 20% withholding tax, within 14 business days after the end of the qualifying month, provided that eligible participant's account(s) MUST NOT be blocked and/or closed at the time of crediting.</li>
@@ -222,7 +224,7 @@
                 <div class="interest-details">
                     <ul>
                         <li>The base/regular interest rate of UpSave is 2.5% p.a.</li><br>
-                        <p class="details-header">Promo runs from Jan. 1 to Jan. 31, 2024:</p>
+                        <p class="details-header">💰 New Promo - runs from Jan. 1 to Jan. 31, 2024 💰</p>
                         <li>New and existing accounts will earn 5% p.a. on their total ADB (no limit).</li>
                         <li>The 5% p.a. promotional interest already includes the base rate of 2.5%.</li>
                         <li>The additional interest reward earned will be credited, less 20% withholding tax, within 14 business days after the end of the qualifying month, provided that eligible participant's account(s) MUST NOT be blocked and/or closed at the time of crediting.</li>
@@ -604,32 +606,6 @@
                 </div>
 
 
-                    <!-- Row 4 -->
-                <div class="banks-logo">
-                    <img src="uno-logo.png" alt="unobank bank logo">
-                </div>
-                <div class="banks-savings">#UNOboost (GCash & UNO)</div>
-                <div class="banks-interest">
-                    <p class="interest">6.5%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <p class="details-header">Term and Interest rate:</p>
-                        <li>3, 4, 5, 6, 7, 8, 9, 10, 11, up to 12 months - 6.5%</li><br>
-                        <p class="details-header">Details:</p>
-                        <li>GCash - minimum of P5,000 and max of P100,000 deposit amount.</li>
-                        <li>UNO App - minimum of P5,000 and max of P500,000 deposit amount.</li>
-                        <li>You can open up to maximum of 5 time deposit accounts.</li>
-                        <li>Interest payout will be at the maturity date.</li>
-                        <li>You can access your funds at any time prior to the maturity of your time deposit. However, the cost of Documentary Stamp Tax (DST) and a pre-termination penalty will be deducted from the net proceeds of your deposit.</li>
-                        <li>Learn more <a href="https://uno.bank/time-deposit/" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
                     <!-- Row 5 -->
                 <div class="banks-logo">
                     <img src="uno-logo.png" alt="unobank bank logo">
@@ -657,6 +633,33 @@
                     </ul>
                 </div>
 
+
+                    <!-- Row 4 -->
+                <div class="banks-logo">
+                    <img src="uno-logo.png" alt="unobank bank logo">
+                </div>
+                <div class="banks-savings">#UNOboost (GCash & UNO)</div>
+                <div class="banks-interest">
+                    <p class="interest">6% - 6.5%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>3, 4, 5 months - 6% p.a.</li>
+                        <li>6, 7, 8, 9, 10, 11, 12 months - 6.5%</li><br>
+                        <p class="details-header">Details:</p>
+                        <li>GCash - minimum of P5,000 and max of P100,000 deposit amount.</li>
+                        <li>UNO App - minimum of P5,000 and max of P500,000 deposit amount.</li>
+                        <li>You can open up to maximum of 5 time deposit accounts.</li>
+                        <li>Interest payout will be at the maturity date.</li>
+                        <li>You can access your funds at any time prior to the maturity of your time deposit. However, the cost of Documentary Stamp Tax (DST) and a pre-termination penalty will be deducted from the net proceeds of your deposit.</li>
+                        <li>Learn more <a href="https://uno.bank/time-deposit/" target="_blank">here.</a></li>
+                    </ul>
+                </div>
 
 
                     <!-- Row 6 -->
@@ -687,7 +690,32 @@
                     </ul>
                 </div>
 
+                    <!-- Row 7 -->  
+                <div class="banks-logo">
+                    <img src="maya-logo.png" alt="maya logo">
+                </div>
+                <div class="banks-savings">Maya TD plus</div>
+                <div class="banks-interest">
+                    <p class="interest">5.5% - 6%</p>
+                </div>
 
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <p class="details-header">Term and Interest rate:</p>
+                        <li>6 months - 6% p.a.</li>
+                        <li>12 months - 7.5% p.a.</li><br>
+                        <p class="details-header">Details:</p>
+                        <li>Minimum of P10,000 deposit amount and no maximum limit.</li>
+                        <li>You can open up to maximum of 5 time deposit accounts.</li>
+                        <li>Interest payout will be at the maturity date.</li>
+                        <li>In case of pre-termination, interest rate is still applicable, this will be computed from the time of placement up to the date of pre-termination.</li>
+                        <li>Pre-termination is subject to DST (Documentary Stamp Tax) that will be shouldered by the account holder.</li>
+                        <li>Learn more <a href="https://www.netbank.ph/netbank-mobile-faqs" target="_blank">here.</a></li>
+                    </ul>
+                </div>
 
 
             </div>
