--- a/index.html
+++ b/index.html
@@ -148,35 +148,6 @@
                 </div>
 
 
-                    <!-- Row 3 -->
-                <div class="banks-logo">
-                    <img src="maya-logo.png" alt="maya bank logo">
-                </div>
-                <div class="banks-savings">Maya Personal Goals</div>
-                <div class="banks-interest">
-                    <p class="interest">6%</p>
-                </div>
-
-                <div class="expand-button">
-                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
-                </div>
-                <div class="interest-details">
-                    <ul>
-                        <p class="details-header">Promo runs from Dec. 6, 2023 to Jan.3, 2024:</p>
-                        <li>Earn 6% p.a. when you create personal goal accounts during the promo period.</li>
-                        <li>Create up to 5 goal accounts and earn 6% p.a. on each account for a duration of up to six (6) months.</li>
-                        <li>Interest rate applies to max Goal balance of P1 million (any amount higher will not earn interest).</li>
-                        <li>Monthly interest crediting.</li><br>
-                        <p class="details-header">Key features:</p>
-                        <li>Access to all Maya app services and features.</li>
-                        <li>5x free InstaPay transfers per month.</li>
-                        <li>Physical and Virtual Debit Card available via the Maya app.</li>
-                        <li>Learn more <a href="https://www.mayabank.ph/savings/personal-goals/" target="_blank">here.</a></li>
-                    </ul>
-                </div>
-
-
-
                     <!-- Row 4 -->  
                 <div class="banks-logo">
                     <img src="cimbgcash-logo.png" alt="gsave logo">
@@ -346,6 +317,31 @@
                         <li>Access to Quick, Big, and Shop Installment Loan products.</li>
                         <li>Request a Bank Certificate.</li>
                         <li>Learn more <a href="https://tonikbank.com/savings-cards/tonik-account" target="_blank">here.</a></li>
+                    </ul>
+                </div>
+
+                    <!-- Row 3 -->
+                <div class="banks-logo">
+                    <img src="maya-logo.png" alt="maya bank logo">
+                </div>
+                <div class="banks-savings">Maya Personal Goals</div>
+                <div class="banks-interest">
+                    <p class="interest">4%</p>
+                </div>
+
+                <div class="expand-button">
+                    <i class="fa-solid fa-chevron-down" style="color: #000000;"></i>
+                </div>
+                <div class="interest-details">
+                    <ul>
+                        <li>Create up to 5 goal accounts and earn 4% p.a. on each account for a duration of up to six (6) months.</li>
+                        <li>Interest rate applies to max Goal balance of P1 million (any amount higher will not earn interest).</li>
+                        <li>Monthly interest crediting.</li><br>
+                        <p class="details-header">Key features:</p>
+                        <li>Access to all Maya app services and features.</li>
+                        <li>5x free InstaPay transfers per month.</li>
+                        <li>Physical and Virtual Debit Card available via the Maya app.</li>
+                        <li>Learn more <a href="https://www.mayabank.ph/savings/personal-goals/" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
@@ -705,15 +701,17 @@
                 <div class="interest-details">
                     <ul>
                         <p class="details-header">Term and Interest rate:</p>
+                        <li>3 months - 5.5% p.a.</li>
                         <li>6 months - 6% p.a.</li>
-                        <li>12 months - 7.5% p.a.</li><br>
+                        <li>12 months - 5.75% p.a.</li><br>
                         <p class="details-header">Details:</p>
-                        <li>Minimum of P10,000 deposit amount and no maximum limit.</li>
-                        <li>You can open up to maximum of 5 time deposit accounts.</li>
-                        <li>Interest payout will be at the maturity date.</li>
-                        <li>In case of pre-termination, interest rate is still applicable, this will be computed from the time of placement up to the date of pre-termination.</li>
-                        <li>Pre-termination is subject to DST (Documentary Stamp Tax) that will be shouldered by the account holder.</li>
-                        <li>Learn more <a href="https://www.netbank.ph/netbank-mobile-faqs" target="_blank">here.</a></li>
+                        <li>Create up to 5 Time Deposit Plus accounts at a time with up to P1,000,000 balance each.</li>
+                        <li>Start with a base rate of 3.5% p.a. once you make an initial deposit (no minimum balance).</li>
+                        <li>Earn a booster rate of 2% - 2.5% p.a. monthly once you reach the target amount.</li>
+                        <li>Minimum of P5,000 target amount to earn booster rate.</li>
+                        <li>Each Time Deposit Plus has its own account number and is different from your Maya Savings or Personal Goal accounts. </li>
+                        <li>You can cancel your Time Deposit Plus account anytime, but subject to cancellation fees.</li>
+                        <li>Learn more <a href="https://www.mayabank.ph/time-deposit-plus/" target="_blank">here.</a></li>
                     </ul>
                 </div>
 
