Add the referral code for Seabank and add the fb page link in the footer

--- a/index.html
+++ b/index.html
@@ -282,7 +282,8 @@
                     <ul>
                         <li>Earn 4.5% p.a. for savings up to P300,000.</li>
                         <li>Excess of P300,000 will earn 3% p.a.</li>
-                        <li>Daily interest crediting.</li><br>
+                        <li>Daily interest crediting.</li>
+                        <li>Get P50 reward when you sign up using referral code "RB525039". Deposit atleast P1,000 and maintain it in your account for 3 days to get the reward.</li><br>
                         <p class="details-header">Key features:</p>
                         <li>Free 15 InstaPay and PESONet transfers to other banks or e-wallets per week.</li>
                         <li>Request and download Bank Certificate.</li>
@@ -729,6 +730,7 @@
     <footer>
         <div id="footer-content">
             <p>For the Filipino Finance Community 💛</p>
+            <p>Please like our Facebook page, <a href="https://web.facebook.com/lemoneydofficial" target="_blank" class="lemoneyd-fb">Lemoneyd</a>, to get updates.</p>
             <p>&copy; 2023 Lemoneyd. All rights reserved.</p>
         </div>
     </footer>
