Change Facebook to FB in footer

--- a/index.html
+++ b/index.html
@@ -730,7 +730,7 @@
     <footer>
         <div id="footer-content">
             <p>For the Filipino Finance Community 💛</p>
-            <p>Please like our Facebook page, <a href="https://web.facebook.com/lemoneydofficial" target="_blank" class="lemoneyd-fb">Lemoneyd</a>, to get updates.</p>
+            <p>Please like our FB page, <a href="https://web.facebook.com/lemoneydofficial" target="_blank" class="lemoneyd-fb">Lemoneyd</a>, to get updates.</p>
             <p>&copy; 2023 Lemoneyd. All rights reserved.</p>
         </div>
     </footer>
