--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
                         <li>Earn 4.5% p.a. for savings up to P300,000.</li>
                         <li>Excess of P300,000 will earn 3% p.a.</li>
                         <li>Daily interest crediting.</li>
-                        <li>Get P50 reward when you sign up using referral code "RB525039". Deposit atleast P1,000 and maintain it in your account for 3 days to get the reward.</li><br>
+                        <li>Get P50 reward when you sign up using referral code "RB525039".<br>Deposit atleast P1,000 and maintain it in your account for 3 days to get the reward.</li><br>
                         <p class="details-header">Key features:</p>
                         <li>Free 15 InstaPay and PESONet transfers to other banks or e-wallets per week.</li>
                         <li>Request and download Bank Certificate.</li>
